--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -10,6 +10,10 @@ $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523
 
+html, body
+  height: 130% 
+
+
 .navbar .navbar-menu
   box-shadow:none !important
 
